fixed image stretching and warping on small screens

--- a/src/assets/css/style2.css
+++ b/src/assets/css/style2.css
@@ -209,13 +209,14 @@ div.info-and-form {
   background-color: white;
 }
 
+/* footer */
 .footer {
   display: flex;
   justify-content: center;
   justify-content: space-around;
   margin-top: 3rem;
   padding: 3rem;
-  background-color: rgb(198, 195, 164);
+  background-color: #444442;
   /* position: fixed; */
   bottom: 0;
   left: 0;
